Reference IDE using devfile url
Signed-off-by: David Kwon <dakwon@redhat.com>

--- a/modules/end-user-guide/pages/managing-workspaces-with-apis.adoc
+++ b/modules/end-user-guide/pages/managing-workspaces-with-apis.adoc
@@ -14,7 +14,7 @@ Because each `DevWorkspace` custom resource on the cluster represents a {prod-sh
 
 Each `DevWorkspace` contains details derived from the devfile of the Git repository cloned for the workspace. For example, a devfile might provide devfile commands and workspace container configurations.
 
-Each `DevWorkspace` custom resource also references a `DevWorkspaceTemplate` custom resource using the `spec.contributions` field, which provides details about the IDE for the workspace.
+Each `DevWorkspace` custom resource can reference a `DevWorkspaceTemplate` custom resource using the `spec.contributions` field, which provides details about the IDE for the workspace.
 
 include::partial$proc_listing-workspaces.adoc[leveloffset=+1]
 
