--- a/modules/end-user-guide/partials/proc_listing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_listing-workspaces.adoc
@@ -6,7 +6,7 @@ You can list your workspaces on a command line.
 
 .Prerequisites
 
-* An active `{orch-cli}` session with permissions to `get` and `list` `DevWorkspace` and `DevWorkspaceTemplate` resources in your {orch-namespace} on the cluster. See {orch-cli-link}.
+* An active `{orch-cli}` session with permissions to `get` and `list` `DevWorkspace` resources in your {orch-namespace} on the cluster. See {orch-cli-link}.
 
 * You know the relevant {prod-short} user namespace on the cluster.
 +
