--- a/modules/end-user-guide/partials/proc_listing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_listing-workspaces.adoc
@@ -2,7 +2,7 @@
 [id="listing-workspaces"]
 = Listing all workspaces
 
-You can list your workspaces on a command line.
+You can list your workspaces by using the command line.
 
 .Prerequisites
 
