--- a/modules/end-user-guide/partials/proc_listing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_listing-workspaces.adoc
@@ -16,15 +16,7 @@ TIP: You can visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your
 +
 [TIP]
 ====
-On OpenShift:
-
-* You can use the `oc` command-line tool to check your current namespace:
-+
-`$ oc project`
-
-* You can switch to your {prod-short} user namespace on a command line if needed:
-+
-`$ oc project __<user_namespace>__`
+On OpenShift, you can use link:https://docs.openshift.com/container-platform/latest/cli_reference/openshift_cli/developer-cli-commands.html#oc-project[the `oc` command-line tool] to display your current namespace or switch to a namespace.
 ====
 
 .Procedure
