Replace TIP content with a link to OCP docs

--- a/modules/end-user-guide/partials/proc_stopping-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_stopping-workspaces.adoc
@@ -12,9 +12,7 @@ You can stop a workspace by setting the `spec.started` field in the `Devworkspac
 +
 [TIP]
 ====
-You can find the relevant workspace name in the output of the following command:
-
-`$ {orch-cli} get devworkspaces`
+You can find the relevant workspace name in the output of `$ {orch-cli} get devworkspaces`.
 ====
 
 * You know the relevant {prod-short} user namespace on the cluster.
