--- a/modules/end-user-guide/partials/proc_removing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_removing-workspaces.adoc
@@ -16,9 +16,7 @@ TIP: Remove workspaces by using the {prod-short} dashboard whenever possible.
 +
 [TIP]
 ====
-You can find the relevant workspace name in the output of the following command:
-
-`$ {orch-cli} get devworkspaces`
+You can find the relevant workspace name in the output of `$ {orch-cli} get devworkspaces`.
 ====
 
 * You know the relevant {prod-short} user namespace on the cluster.
