--- a/modules/end-user-guide/partials/proc_starting-stopped-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_starting-stopped-workspaces.adoc
@@ -12,9 +12,7 @@ You can start a stopped workspace by setting the `spec.started` field in the `De
 +
 [TIP]
 ====
-You can find the relevant workspace name in the output of the following command:
-
-`$ {orch-cli} get devworkspaces`
+You can find the relevant workspace name in the output of `$ {orch-cli} get devworkspaces`.
 ====
 
 * You know the relevant {prod-short} user namespace on the cluster.
