Apply suggestions from code review

--- a/modules/end-user-guide/partials/proc_stopping-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_stopping-workspaces.adoc
@@ -32,6 +32,9 @@ On OpenShift, you can use link:https://docs.openshift.com/container-platform/lat
 +
 [subs="+quotes,attributes"]
 ----
-$ {orch-cli} patch devworkspace __<workspace_name>__ -p '{"spec":{"started":false}}' --type=merge -n __<user_namespace>__ && \
-{orch-cli} wait --for=jsonpath='{.status.phase}'=Stopped dw/__<workspace_name>__ -n __<user_namespace>__
+$ {orch-cli} patch devworkspace __<workspace_name>__ \
+-p '{"spec":{"started":false}}' \
+--type=merge -n __<user_namespace>__ && \
+{orch-cli} wait --for=jsonpath='{.status.phase}'=Stopped \
+dw/__<workspace_name>__ -n __<user_namespace>__
 ----
