Replace TIP content with a link to OCP docs

--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -15,10 +15,10 @@ Creating new workspaces through the {prod-short} dashboard provides better user 
 * Access to the workspace is secured by default with the `routingClass: che` in the `DevWorkspace` of the workspace.
 * Recognition of the `DevWorkspaceOperatorConfig` configuration is managed by {prod-short}.
 * Recognition of configurations in `spec.devEnvironments` specified in the `CheCluster` custom resource including:
-** Persistent storage strategy is specified with `devEnvironments.storage`
-** Default IDE is specified with `devEnvironments.defaultEditor`
-** Default plugins are specified with `devEnvironments.defaultPlugins`
-** Container build configuration is specified with `devEnvironments.containerBuildConfiguration`
+** Persistent storage strategy is specified with `devEnvironments.storage`.
+** Default IDE is specified with `devEnvironments.defaultEditor`.
+** Default plugins are specified with `devEnvironments.defaultPlugins`.
+** Container build configuration is specified with `devEnvironments.containerBuildConfiguration`.
 
 ====
 
@@ -30,7 +30,7 @@ Creating new workspaces through the {prod-short} dashboard provides better user 
 +
 TIP: You can visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
 
-* You are on the {prod-short} user namespace on the cluster.
+* You are in the {prod-short} user namespace on the cluster.
 +
 NOTE: {prod-short} administrators who intend to create workspaces for other users must create the `DevWorkspace` custom resource in a user namespace that is provisioned by {prod-short} or by the administrator. See xref:administration-guide:configuring-namespace-provisioning.adoc[].
 
