--- a/modules/end-user-guide/partials/proc_removing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_removing-workspaces.adoc
@@ -23,7 +23,7 @@ You can find the relevant workspace name in the output of `$ {orch-cli} get devw
 +
 TIP: You can visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
 
-* You are on the {prod-short} user namespace on the cluster.
+* You are in the {prod-short} user namespace on the cluster.
 +
 [TIP]
 ====
