--- a/modules/end-user-guide/partials/proc_listing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_listing-workspaces.adoc
@@ -12,7 +12,7 @@ As a user, you can list your workspaces by using the command line.
 +
 TIP: You can visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
 
-* You are on the {prod-short} user namespace on the cluster.
+* You are in the {prod-short} user namespace on the cluster.
 +
 [TIP]
 ====
