--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -7,7 +7,7 @@ If your use case does not permit use of the {prod-short} dashboard, you can crea
 [NOTE]
 ====
 
-Creating new workspaces through the {prod-short} dashboard provides better user experience and configuration benefits compared to using the command line:
+Creating workspaces through the {prod-short} dashboard provides better user experience and configuration benefits compared to using the command line:
 
 * As a user, you are automatically logged in to the {orch-name} cluster.
 * {platforms-name} clients work automatically.
