--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -118,5 +118,5 @@ user1-dev            my-devworkspace       workspacedf64e4a492cd4701   Running  
 +
 You can then open the workspace by using one of these options:
 +
-** Visit the URL provided in the `INFO` section of the output of the `{orch-cli} get devworkspaces` command.
+** Visit the URL provided in the *INFO* section of the output of the `{orch-cli} get devworkspaces` command.
 ** Open the workspace from the {prod-short} dashboard.
