--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -9,7 +9,7 @@ If your use case does not permit use of the {prod-short} dashboard, you can crea
 
 Creating workspaces through the {prod-short} dashboard provides better user experience and configuration benefits compared to using the command line:
 
-* As a user, you are automatically logged in to the {orch-name} cluster.
+* As a user, you are automatically logged in to the cluster.
 * {platforms-name} clients work automatically.
 * {prod-short} and its components automatically convert the target Git repository's devfile into the `DevWorkspace` and `DevWorkspaceTemplate` custom resources on the cluster.
 * Access to the workspace is secured by default with the `routingClass: che` in the `DevWorkspace` of the workspace.
