Apply suggestions from code review

--- a/modules/end-user-guide/partials/proc_starting-stopped-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_starting-stopped-workspaces.adoc
@@ -28,7 +28,7 @@ On OpenShift, you can use the command-line `oc` tool to link:https://docs.opensh
 
 .Procedure
 
-* Run the following command to start the stopped workspace:
+* Run the following command to start a stopped workspace:
 +
 [subs="+quotes,attributes"]
 ----
