--- a/modules/end-user-guide/partials/proc_stopping-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_stopping-workspaces.adoc
@@ -28,7 +28,7 @@ On OpenShift, you can use the command-line `oc` tool to link:https://docs.opensh
 
 .Procedure
 
-* Run the following command to stop that workspace:
+* Run the following command to stop a workspace:
 +
 [subs="+quotes,attributes"]
 ----
