--- a/modules/end-user-guide/partials/proc_removing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_removing-workspaces.adoc
@@ -32,7 +32,7 @@ On OpenShift, you can use the command-line `oc` tool to link:https://docs.opensh
 
 .Procedure
 
-* Run the following command to remove the workspace:
+* Run the following command to remove a workspace:
 +
 [subs="+quotes,attributes"]
 ----
