--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -89,6 +89,7 @@ spec:
 
 . Apply the `DevWorkspace` custom resource to the cluster.
 
+.Verification
 . Verify that the workspace is starting by checking the *PHASE* status of the `DevWorkspace`.
 +
 [subs="+quotes,attributes"]
