--- a/modules/administration-guide/pages/configuring-storage.adoc
+++ b/modules/administration-guide/pages/configuring-storage.adoc
@@ -7,4 +7,8 @@
 [id="configuring-storage"]
 = Configuring storage
 
+[WARNING]
+====
+Network File Storage (NFS) is not supported.
+
 * xref:installing-che-using-storage-classes.adoc[]
