--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -26,6 +26,8 @@ include::partial$snip_preparing-images-for-a-restricted-environment.adoc[]
 [subs="+attributes,+quotes"]
 ----
 $ {prod-cli} server:deploy --platform=openshift \
+  --catalog-source-name=restricted-environment-install \
+  --catalog-source-namespace=openshift-marketplace \
   --che-operator-cr-patch-yaml=che-operator-cr-patch.yaml
 ----
 
