--- a/modules/administration-guide/pages/configuring-storage.adoc
+++ b/modules/administration-guide/pages/configuring-storage.adoc
@@ -9,7 +9,7 @@
 
 [WARNING]
 ====
-Network File Storage (NFS) is not supported.
+{prod-short} does not support the Network File System (NFS) protocol.
 ====
 
 * xref:installing-che-using-storage-classes.adoc[]
