--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -29,8 +29,8 @@ $ {prod-cli} server:deploy \
   --platform=openshift \
   --catalog-source-name=restricted-environment-install \
   --catalog-source-namespace=openshift-marketplace \
-  --skip-devworkspace-operator \ 
-  --che-operator-cr-patch-yaml=che-operator-cr-patch.yaml \
+  --skip-devworkspace-operator \
+  --che-operator-cr-patch-yaml=che-operator-cr-patch.yaml
 ----
 
 . Allow incoming traffic from the {prod-short} namespace to all Pods in the user {orch-namespace}s. See: xref:configuring-network-policies.adoc[].
