--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -36,6 +36,7 @@
 *** xref:enabling-nuget-artifact-repositories.adoc[]
 * xref:requesting-persistent-storage-for-workspaces.adoc[]
 * xref:integrating-with-kubernetes.adoc[]
+** xref:managing-workspaces-with-apis.adoc[]
 ** xref:automatic-token-injection.adoc[]
 ** xref:navigating-che-from-openshift-developer-perspective.adoc[]
 ** xref:navigating-openshift-web-console-from-che.adoc[]
