--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -35,7 +35,7 @@ metadata:
     app.kubernetes.io/component: oauth-scm-configuration
   annotations:
     che.eclipse.org/oauth-scm-server: github
-    che.eclipse.org/scm-server-endpoint: <github_server_url> <2>
+    che.eclipse.org/scm-server-endpoint: __<github_server_url>__ <2>
     che.eclipse.org/scm-github-disable-subdomain-isolation: "__<true_or_false>__" <3>
 type: Opaque
 data:
