--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -43,7 +43,7 @@ data:
   secret: __<Base64_GitHub_OAuth_Client_Secret>__ <5>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<2> A *GitHub Enterprise Server URL*. By default `https://github.com` is used for the `SAAS` version.
+<2> A *GitHub Enterprise Server URL*. By default, `https://github.com` is used for the `SAAS` version.
 <3> Subdomain isolation for GitHub Enterprise Server. To disable subdomain isolation, set this to `"true"`. To enable subdomain isolation, set this to `"false"`.
 <4> The Base64-encoded *GitHub OAuth Client ID*.
 <5> The Base64-encoded *GitHub OAuth Client Secret*.
