--- a/modules/end-user-guide/partials/con_default-vs-code-extensions.adoc
+++ b/modules/end-user-guide/partials/con_default-vs-code-extensions.adoc
@@ -2,13 +2,12 @@
 [id="default-vs-code-extensions"]
 = Default `VS Code` extensions
 
-{prod-short} adds these extensions:
+The {prod-short} build of the Microsoft Visual Studio Code - Open Source cloud IDE installs the following extensions by default:
 
 Commands::
 Translates Devfile commands to Microsoft Visual Studio Code - Open Source tasks.
 +
-.Procedure
-* To see the drop-down list of available tasks, type: kbd:[F1] `Tasks: Run Task` kbd:[Enter] `che`.
+TIP: To see the drop-down list of available tasks, type: kbd:[F1] `Tasks: Run Task` kbd:[Enter] `che`.
 
 Activity tracker::
 Tracks events provided by the Microsoft Visual Studio Code - Open Source to determine and stop inactive workspaces.
@@ -19,32 +18,28 @@ Provides helpers to interact with {devworkspace} and {prod-short}.
 
 GitHub authentication::
 Provides support for authenticating to GitHub.
-It registers the `github` Authentication Provider that can be leveraged by other extensions.
-This also provides the GitHub authentication used by Settings Sync.
+It registers the `github` *Authentication Provider* that can be leveraged by other extensions.
+This also provides the GitHub authentication used by *Settings Sync*.
 
 Port::
-Detects opening ports and provides redirect URI.
+Detects opening ports and provides a redirect URI.
 When a process starts listening to a port, {prod-short} displays a notification with a link to open the resulting resource.
 +
-.Procedure
-* To display the endpoint list, type: kbd:[F1] `Explorer: Focus on endpoints View` kbd:[Enter].
+TIP: To display the endpoint list, type: kbd:[F1] `Explorer: Focus on endpoints View` kbd:[Enter].
 
 Remote::
 Provides commands for the remote authority.
 
 Resource monitor::
-Monitors resources such as CPU and RAM.
+Monitors resources such as the CPU and RAM.
 
 Telemetry::
-Detects and sends the following events to a backend telemetry plugin listening on `\http://localhost:$\{DEVWORKSPACE_TELEMETRY_BACKEND_PORT}`:
-
-`WORKSPACE_OPENED`:::
-Sent when the telemetry extension activates
-
-`EDITOR_USED`:::
-Sent on the `vscode.workspace.onDidChangeTextDocument` event
+Detects and sends the following events to a backend telemetry plugin that listens on `\http://localhost:$\{DEVWORKSPACE_TELEMETRY_BACKEND_PORT}`.
++
+* Sends `WORKSPACE_OPENED` when the telemetry extension activates.
+* Sends `EDITOR_USED` on the `vscode.workspace.onDidChangeTextDocument` event.
 
 Terminal::
 Opens a terminal to a {devworkspace} container.
 
-NOTE: Because the {prod-short} build of Microsoft Visual Studio Code - Open Source supports custom branding, your organization might be using a branded build.
+NOTE: Because the {prod-short} build of this IDE supports custom branding, your organization might be using a branded build.
