--- a/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
+++ b/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
@@ -2,10 +2,10 @@
 [id="adding-vs-code-extensions"]
 = Adding `VS Code` extensions
 
-To enable the loaded Microsoft Visual Studio Code - Open Source in a workspace to automatically install selected extensions, you have to add an `extensions.json` file into the remote Git repository that contains your project source code and that will be cloned into workspaces.
+To have the Microsoft Visual Studio Code - Open Source cloud IDE automatically install chosen extensions, you have to add an `extensions.json` file to the remote Git repository that contains your project source code and that will be cloned into workspaces.
 
 .Prerequisites
-* {prod-short} has access to the link:https://www.open-vsx.org/[OpenVSX registry].
+* {prod-short} has network access to the link:https://www.open-vsx.org/[OpenVSX registry].
 +
 [TIP]
 ====
@@ -22,18 +22,23 @@ To install recommended extensions in a restricted environment, consider these op
 
 . Create a `.vscode/extensions.json` file in the remote Git repository.
 
-. Go to the link:https://www.open-vsx.org/[Open VSX registry], and while on the extension page, copy the **Unique_identifier** of each chosen extension and the publisher username from **Published_by** into the `extensions.json` file:
+. Go to the link:https://www.open-vsx.org/[Open VSX registry] and copy the **Unique identifier** of each chosen extension from the extension-listing page to the `extensions.json` file as follows:
 +
 [source,json,subs="+quotes"]
 ----
   {
     "recommendations": [
-      "__<Published_by_A>__.__<Unique_identifier_1>__",
-      "__<Published_by_B>__.__<Unique_identifier_2>__",
-      "__<Published_by_C>__.__<Unique_identifier_3>__"
+      "__<Unique_identifier_of_extension_A>__",
+      "__<Unique_identifier_of_extension_B>__",
+      "__<Unique_identifier_of_extension_C>__"
     ]
   }
 ----
+
+.Verification
+
+. xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[Start a new workspace by using the URL of the remote Git repository] that contains the created `extensions.json` file.
+. In the IDE of the workspace, press kbd:[Ctrl+Shift+X] or go to *Extensions* to find each of the extensions listed in the file.
 
 .Additional resources
 * link:https://www.open-vsx.org/[Open VSX registry - Extensions for Microsoft Visual Studio Code compatible editors]
