--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -21,7 +21,10 @@ Following this procedure makes the service compliant to EU General Data Protecti
 
 .Procedure
 
-. Get the __<username>__ user __<id>__ `id`: navigate to pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/find_1, click btn:[Try it out], set *name*: __<username>__, and click btn:[Execute]. Scroll down the *Response body* to find the `id` value.
+. Get the __<username>__ user __<id>__ `id`:
+.. Navigate to pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/find_1.
+.. Click btn:[Try it out], set *name*: __<username>__, and click btn:[Execute].
+.. Scroll down the *Response body* to find the `id` value.
 // +
 // [subs="+quotes,macros,attributes"]
 // ----
@@ -30,7 +33,9 @@ Following this procedure makes the service compliant to EU General Data Protecti
 //   'pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/find?name=__<username>__'
 // ----
 
-. Remove the __<id>__ user data that {prod-short} server manages, such as user preferences: navigate to pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/remove, click btn:[Try it out], set *id*: __<id>__, and click btn:[Execute]. Expect a `204` response code:
+. Remove the __<id>__ user data that {prod-short} server manages, such as user preferences:
+.. Navigate to pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/remove.
+.. Click btn:[Try it out], set *id*: __<id>__, and click btn:[Execute].
 // +
 // [subs="+quotes,macros,attributes"]
 // ----
