--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
@@ -21,7 +21,7 @@ Set up an application link for OAuth 2.0 on the Bitbucket Server.
 . Select *External application* and *Incoming*.
 . Enter `pass:c,a,q[{prod-url}]/api/oauth/callback` to the *Redirect URL* field.
 . Select the *Admin - Write*  checkbox in *Application permissions*.
-. Click the *Save* button.
+. Click *Save*.
 . Copy the *Client ID* and encode it to Base64 for use when applying the Bitbucket Server OAuth App Secret:
 +
 [subs="+quotes,+attributes,+macros"]
