--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -131,7 +131,7 @@ echo -n "extraheader = \"Authorization: Basic "$(printf ":%s" <personal access t
 ```
 see link:https://learn.microsoft.com/en-us/azure/devops/repos/git/auth-overview?view=azure-devops&tabs=Linux#personal-access-tokens[the documentation page] for more information.
 
-This header is needed for remote git operations to Azure Devops Server, e.g. `git clone`. This authorization method has higher priority over the git credentials store, so git will fail on remote operations to other git providers. To be able to use other providers you need to remove the `extraheader` from the gitconfig.
+The `extraheader` configuration is needed for remote git operations to Azure Devops Server, e.g. `git clone`. This authorization method has a higher priority over the git credentials store, and as a result, the remote operations to other Git providers will fail.
 ====
 
 .Verification
